deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chasewhiterabbit-service
  namespace: chasewhiterabbit
  labels:
    app: chasewhiterabbit
spec:
  selector:
    app: chasewhiterabbit
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  type: ClusterIP
